--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Cash Flow</string>
+    <string name="action_setting">setting</string>
+    <string name="action_logout">logout</string>
 </resources>
