--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,20 @@
 <resources>
     <string name="app_name">Cash Flow</string>
-    <string name="action_setting">setting</string>
-    <string name="action_logout">logout</string>
+    <string name="available_balance">Available Balance</string>
+    <string name="usd">USD</string>
+    <string name="balance">$108.30</string>
+    <string name="last_payment">Last Payment: $10</string>
+    <string name="date">6 April, 2018</string>
+    <string name="transfer_money">Transfer Money</string>
+    <string name="request_money">Request Money</string>
+    <string name="activity">Activity</string>
+    <string name="view_all">View All</string>
+    <string name="wallet_transfer">Wallet Transfer</string>
+    <string name="money_sent_received">Money sent - received</string>
+    <string name="money_sent_pending">Money sent - pending</string>
+    <string name="action_setting">Setting</string>
+    <string name="action_logout">Logout</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="login_activity">Login</string>
 </resources>
